# spatial_relationships

./: .gitignore  CMakeLists.txt  Doxyfile.in  bibliography.bib
include/: compound_cost_function.h  functions.h  inverse_compound_cost_function.h  quaternion_angle_cost_function.h  quaternion_distance_cost_function.h  quaternion_from_rpy_cost_function.h  tester.h  transformations.h  transformtions.h
latex/: equations.tex
src/: CMakeLists.txt  compound_cost_function.cpp  functions.cpp  inverse_compound_cost_function.cpp  quaternion_angle_cost_function.cpp  quaternion_distance_cost_function.cpp  quaternion_from_rpy_cost_function.cpp  test_jacobians.cpp
